--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </div>
 
     <h2>Contact Me</h2>
-    <p>Email: yourname@example.com</p>
+    <p>Email: yourname@example.cm</p>
 </body>
 </html>
